--- a/app/src/main/res/layout/fragment_global.xml
+++ b/app/src/main/res/layout/fragment_global.xml
@@ -13,11 +13,11 @@
         tools:text="+" />
 
     <Button
-        android:id="@+id/global"
+        android:id="@+id/nextGlobalButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="130dp"
-        android:text="GLOBAL" />
+        android:text="TO NEXT GLOBAL SCREEN" />
 
 </FrameLayout>
